[gd_scene load_steps=20 format=3 uid="uid://dvm14f3rbfkm7"]

[ext_resource type="Script" path="res://Zombie.gd" id="1_8ev3s"]
[ext_resource type="Texture2D" uid="uid://puib62yon2ef" path="res://Assets/Images/Tiles/pixil-frame-0 (2).png" id="2_spaql"]
[ext_resource type="AudioStream" uid="uid://dnfhuf4ldgcko" path="res://Assets/Audio/Sound Effects/World Map/free-zombie-moan-sounds-54824.mp3" id="3_w8o10"]

[sub_resource type="AtlasTexture" id="AtlasTexture_521qb"]
atlas = ExtResource("2_spaql")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg1lp"]
atlas = ExtResource("2_spaql")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6npm0"]
atlas = ExtResource("2_spaql")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xqje"]
atlas = ExtResource("2_spaql")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cr3u"]
atlas = ExtResource("2_spaql")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_me3xo"]
atlas = ExtResource("2_spaql")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_01pdl"]
atlas = ExtResource("2_spaql")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tq8yu"]
atlas = ExtResource("2_spaql")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ca5o"]
atlas = ExtResource("2_spaql")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h82rc"]
atlas = ExtResource("2_spaql")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jakot"]
atlas = ExtResource("2_spaql")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aymt7"]
atlas = ExtResource("2_spaql")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahd33"]
atlas = ExtResource("2_spaql")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdx6v"]
atlas = ExtResource("2_spaql")
region = Rect2(0, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_noxts"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_521qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg1lp")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6npm0")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xqje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cr3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me3xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01pdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tq8yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ca5o")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h82rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jakot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aymt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahd33")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdx6v")
}],
"loop": true,
"name": &"take_damage",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swktm"]
size = Vector2(10, 16)

[node name="Zombie" type="CharacterBody2D"]
script = ExtResource("1_8ev3s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 3
position = Vector2(11, -8)
sprite_frames = SubResource("SpriteFrames_noxts")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.343529

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, -8)
shape = SubResource("RectangleShape2D_swktm")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="RayCast_right" type="RayCast2D" parent="."]
position = Vector2(13, -8)
target_position = Vector2(2, 0)

[node name="RayCast_left" type="RayCast2D" parent="."]
position = Vector2(3, -8)
target_position = Vector2(-1, 0)

[node name="RayCast_up" type="RayCast2D" parent="."]
position = Vector2(8, -16)
target_position = Vector2(0, -1)

[node name="RayCast_down" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(0, 1)

[node name="Groan" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_w8o10")
max_distance = 3.0
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
